Fix header logo on Safari

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -35,6 +35,7 @@
 @media (max-width: $responsive_start) {
   #logo {
     float: left;
+    width: 30px;
     img {
       margin-top: 0;
     }
